@@ -18,8 +18,6 @@
  * along with LFSApplications.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#include <getopt.h>
-
 #include "config.h"
 #include <lfstk/LFSTKGlobals.h>
 
@@ -252,42 +250,23 @@ void loadMonitorInfo(void)
 
 int main(int argc, char **argv)
 {
-	XEvent		event;
-	int			sy=0;
-	int			c=0;
-	int			option_index=0;
-	const char	*shortOpts="h?w:";
-	std::string bffr;
-
-	option 		longOptions[]=
-		{
-				{"window",1,0,'w'},
-				{"help",0,0,'h'},
-				{0, 0, 0, 0}
-		};
-
-	while(1)
-		{
-			option_index=0;
-			c=getopt_long_only(argc,argv,shortOpts,longOptions,&option_index);
-			if (c==-1)
-				break;
-			switch (c)
-				{
-					case 'h':
-					case '?':
-						printf("-?,-h,--help\t\tPrint this help\n");
-						printf("-w,--window\t\tSet transient for window\n");
-						exit(0);
-					case 'w':
-						parentWindow=atoi(optarg);
-						break;
-				}
-		}
+	XEvent			event;
+	int				sy=0;
+	std::string		bffr;
+	LFSTK_prefsClass	cliprefs("lfsbackdropprefs",VERSION);
+	option			longOptions[]={{"window",1,0,'w'},{0, 0, 0, 0}};
 
 	apc=new LFSTK_applicationClass();
 	apc->LFSTK_addWindow(NULL,BOXLABEL,"LFSTKPrefs");
 	wc=apc->mainWindow;
+
+	cliprefs.prefsMap=
+		{
+			{LFSTK_UtilityClass::LFSTK_hashFromKey("window"),{TYPEINT,"window","Set transient for window ARG","",false,0}}
+		};
+	if(cliprefs.LFSTK_argsToPrefs(argc,argv,longOptions,true)==false)
+		return(1);
+	parentWindow=cliprefs.LFSTK_getInt("window");
 
 	asprintf(&wd,"%s",apc->userHome);
 	asprintf(&mainPrefs,"%s/lfssetwallpaper.rc",apc->configDir.c_str());
