@@ -18,7 +18,6 @@
  * along with LFSApplications.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#include <getopt.h>
 #include <alloca.h>
 #include <limits.h>
 
@@ -30,11 +29,11 @@
 
 LFSTK_applicationClass	*apc=NULL;
 LFSTK_windowClass		*wc=NULL;
-LFSTK_prefsClass		prefs;
-LFSTK_labelClass		*label=NULL;
-LFSTK_labelClass		*cursorlabel=NULL;
-LFSTK_labelClass		*personal=NULL;
-LFSTK_labelClass		*copyrite=NULL;
+LFSTK_prefsClass			prefs;
+LFSTK_labelClass			*label=NULL;
+LFSTK_labelClass			*cursorlabel=NULL;
+LFSTK_labelClass			*personal=NULL;
+LFSTK_labelClass			*copyrite=NULL;
 LFSTK_buttonClass		*seperator=NULL;
 LFSTK_buttonClass		*quit=NULL;
 LFSTK_buttonClass		*apply=NULL;
@@ -616,41 +615,22 @@ int main(int argc, char **argv)
 	XEvent		event;
 	int			sy=0;
 	int			sx=BORDER;
-	int			c=0;
-	int			option_index=0;
 	int			key=666;
 	std::string	command;
-	const char	*shortOpts="h?w:";
-	option		longOptions[]=
-		{
-			{"window",1,0,'w'},
-			{"help",0,0,'h'},
-			{0, 0, 0, 0}
-		};
-
-	while(1)
-		{
-			option_index=0;
-			c=getopt_long_only(argc,argv,shortOpts,longOptions,&option_index);
-			if (c==-1)
-				break;
-			switch (c)
-				{
-					case 'h':
-					case '?':
-						printf("-?,-h,--help\t\tPrint this help\n");
-						printf("-w,--window\t\tSet transient for window\n");
-						printf("Right click in a colour edit box for a colour chooser.\n");
-						exit(0);
-					case 'w':
-						parentWindow=atoi(optarg);
-						break;
-				}
-		}
+	option		longOptions[]={{"window",1,0,'w'},{0, 0, 0, 0}};
+	LFSTK_prefsClass	cliprefs("lfstkprefs",VERSION);
 
 	apc=new LFSTK_applicationClass();
 	apc->LFSTK_addWindow(NULL,BOXLABEL,"LFSTKPrefs");
 	wc=apc->mainWindow;
+
+	cliprefs.prefsMap=
+		{
+			{LFSTK_UtilityClass::LFSTK_hashFromKey("window"),{TYPEINT,"window","Set transient for window ARG","",false,0}}
+		};
+	if(cliprefs.LFSTK_argsToPrefs(argc,argv,longOptions,true)==false)
+		return(1);
+	parentWindow=cliprefs.LFSTK_getInt("window");
 
 	command=apc->globalLib->LFSTK_oneLiner("sed -n '2p' %S/lfsappearance.rc",apc->configDir);
 	key=std::stoi(command,nullptr,10);
