@@ -1,4 +1,5 @@
 0.2.0
+Update to use new prefsclass functions.
 Added killall docks to lfsappearance 'Apply'.
 Added prelight colour to lfsdockprefs.
 File dialog now goes to last valid folder selected.
